TdxHack2025/force-app/main/default/objects/Ambulance__c/Ambulance__c.object-meta.xml
<CustomObject>
    <label>Ambulance</label>
    <nameField>
        <label>Ambulance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ambulances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>