TdxHack2025/force-app/main/default/objects/Ambulance__c/fields/Delegated_User__c.field-meta.xml
<CustomField>
    <fullName>Delegated_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delegated User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Ambulances1</relationshipName>
    <type>Lookup</type>
</CustomField>