TdxHack2025/force-app/main/default/objects/Ambulance__c/fields/Speciality_Status__c.field-meta.xml
<CustomField>
    <fullName>Speciality_Status__c</fullName>
    <label>Speciality Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>