TdxHack2025/force-app/main/default/objects/Ambulance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Hospital__c</columns>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Delegated_User__c</columns>
    <columns>Speciality_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>